--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                 <p>This shows that Tuberculosis is not a concern for countries that are developed, but tend to be more prevalent
                   in countries that are still developing. Developing countries suffer from more cases of TB because
                     the level of their health care system is not equipped enough to treat everyone in the country.</p>
+                <p>USA: 3</p>
+                <p>Canada: 6</p>
+                <p>Brazil: 45</p>
+                <p>Peru: 123</p>
+                <p>Argentina: 27</p>
             </section>
 
             <section data-scene="2000">
@@ -83,6 +88,11 @@
                     In the year 2000, Neoliberal globalization policies were becoming the norm among many developed nations.
                     As a result, health loans were not going to be given to developing countries in South America unless
                     they received proper compensation back and proof that they could use the money to develop a proper health care system.</p>
+                <p>USA: 6</p>
+                <p>Canada: 6</p>
+                <p>Brazil: 45</p>
+                <p>Peru: 183</p>
+                <p>Argentina: 37</p>
             </section>
 
             <section data-scene="funding">
@@ -94,6 +104,11 @@
                 <p>Yet, on this list of 5 countries, Peru has the highest incidence rate of Tuberculosis among them even though it is spending as much money as
                     one of the highest grossing nations in the world. And the results show in the data from the first two maps in that Peru was able to reduce the number of its cases
                     by nearly 60.</p>
+                <p>USA: 135</p>
+                <p>Canada: 27</p>
+                <p>Brazil: 38</p>
+                <p>Peru: 141</p>
+                <p>Argentina: 3</p>
             </section>
 
             <section data-scene="doctors">
@@ -108,7 +123,12 @@
                     38 to 27 in nearly two decades.</p>
                 <p>Brazil, on the other hand, has not only few doctors, but also few health expenditures going towards TB treatment.
                     As a result, Brazil has had little to no change in the number of TB cases that it gets each year since 2000.
-                    This lack of development in either department has stagnated Brazil's development against the disease compared to Peru and Argentina.
+                    This lack of development in either department has stagnated Brazil's development against the disease compared to Peru and Argentina.</p>
+                <p>USA: 26</p>
+                <p>Canada: 23</p>
+                <p>Brazil: 21</p>
+                <p>Peru: 13</p>
+                <p>Argentina: 40</p>
             </section>
             <section data-scene="percent">
                 <h2>Percentage of GDP used for Health Expenditure</h2>
@@ -118,6 +138,11 @@
                 <p>On the other hand, Peru spends the least percentage of their GDP on health expenditures preferring to spend it on other things such as their economy.
                     Yet they are also the highest spender on TB treatment which means, that a large majority of their health expenditures
                     goes towards treating TB.</p>
+                <p>USA: 18</p>
+                <p>Canada: 12</p>
+                <p>Brazil: 10</p>
+                <p>Peru: 5</p>
+                <p>Argentina: 8</p>
             </section>
 
             <section data-scene="conclusion">
