--- a/index.html
+++ b/index.html
@@ -57,10 +57,15 @@
                     <h1 class="display-4 d-flex justify-content-center">Comparing Tuberculosis in North and South America</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">This story map
-                        illustrates the differences in Tuberculosis rates between
-                        North and South America to explain why TB is still an issue Today
-                        despite current technological advancements.
+                    <small class="d-flex justify-content-center" style="color: rgba(255,255,255,0.95)">Tuberculosis, or TB, is a disease that
+                      usually attacks the lungs, but they can also damage other parts of the body which can lead to death. In the past about
+                      a couple centuries, Tuberculosis killed more people than any other disease in the world. Today, Tuberculosis is now known
+                      as the leading killer of people who are HIV-positive and one of ten highest causes of death around the world. Yet, many
+                      people from wealthy households are unconcerned with the disease that has such a high mortality rate. How is it that a
+                      disease considered inconsequential to one country can be such a huge problem for another nation entirely? Why does
+                      Tuberculosis continue to persist when advancements in medicine have already created treatments for it? This project
+                      aims to explain and represent how Tuberculosis persists in the world despite the numerous technological and medical
+                      advancements already developed.
                     </small>
                 </div>
             </section>
